notes minor fixes
